# WeFlow

./: .gitignore  Cargo.toml  Makefile  PLAN.md  package.json
.github/workflows/: native-cli.yml  preview-nightly-main.yml
crates/weflow-assets/: Cargo.toml  build.rs
crates/weflow-assets/src/: lib.rs
crates/weflow-cli/: Cargo.toml
crates/weflow-cli/src/: main.rs
crates/weflow-core/: Cargo.toml
crates/weflow-core/src/: backup.rs  biz.rs  config.rs  decrypt.rs  error.rs  export.rs  insight.rs  lib.rs  media.rs  output.rs  push.rs  services.rs
crates/weflow-native/: Cargo.toml
crates/weflow-native/src/: lib.rs  wcdb.rs  wxkey.rs
