[workspace]
members = [
  "crates/weflow-assets",
  "crates/weflow-native",
  "crates/weflow-core",
  "crates/weflow-cli",
]
resolver = "2"

[workspace.package]
version = "4.3.0"
edition = "2021"
license = "SEE LICENSE IN LICENSE"

[workspace.dependencies]
aes = "0.8"
anyhow = "1.0.98"
async-stream = "0.3"
axum = "0.8.4"
clap = { version = "4.5.40", features = ["derive", "env"] }
dirs = "6.0.0"
ecb = "0.1"
futures = "0.3"
libloading = "0.8.8"
md-5 = "0.10"
mime_guess = "2.0.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rust_xlsxwriter = "0.82"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal", "net"] }
tokio-stream = "0.1"
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
walkdir = "2.5.0"
zip = "2"
