[package]
name = "weflow-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "weflow"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
clap.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
weflow-core = { path = "../weflow-core" }
weflow-assets = { path = "../weflow-assets" }
